--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Site settings
 title: Fabulam Canor
+tagline: A performant and responsive Jekyll theme
 email: helios7157@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
@@ -13,13 +14,7 @@ paginate: 5
 
 # Build settings
 markdown: redcarpet
-extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "tables"]
 highlighter: pygments
-permalink: pretty
-safe: true
-lsi: true
-gems: 
-- jekyll-paginate
-- jekyll-redirect-from
-- jekyll-feed
-- jemoji
+
+# Gems
+gems: [jekyll-paginate]
