--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username:  canorus
 paginate: 5
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
 highlighter: pygments
 
 # Gems
