--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Fabulam Canor
-tagline: A performant and responsive Jekyll theme
+title: Canor의 이야
+tagline: Canor이 적어가는 삶의 이야기
 email: helios7157@gmail.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
