--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Canor의 이야
+title: Canor의 이야기
 tagline: Canor이 적어가는 삶의 이야기
 email: helios7157@gmail.com
 description: > # this means to ignore newlines until "baseurl"
