--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ url: http://canorus.github.io
 baseurl: ''
 
 social:
+  facebook: 100010552568083
   twitter: psCanor
   github: canorus
   rss: feed.xml
