--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ permalink: /:year/:month/:title
 # Enable for using pages, more details are here: http://jekyllrb.com/docs/pagination/
 #paginate: 3
 
-highlighter: pygments
+highlighter: rouge
 
 markdown: redcarpet
 redcarpet:
