engine changed to Kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ permalink: /:year/:month/:title
 
 highlighter: rouge
 
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "footnotes"]
 
