--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ permalink: /:year/:month/:title
 highlighter: rouge
 
 markdown: kramdown
-redcarpet:
-  extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "footnotes"]
+# kramdown:
+#  extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "footnotes"]
 
 exclude: ['README.md', 'LICENSE']
