--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,26 @@
-# Jekyll configuration
+# Dependencies
+markdown:         redcarpet
+highlighter:      pygments
 
-name: Fabulam Canor
-description: Geek nerd
+# Permalinks
+permalink:        pretty
+relative_permalinks: true
 
-# Url is currently only used only for the RSS feed in feed.xml
-url: http://canorus.github.io
-#url: http://localhost:4000
+# Setup
+title:            BlackDoc
+tagline:          Black Theme for Jekyll
+description:      "A two-column black theme with a scrolling sidebar. Ideal for sites requiring a master-detail layout, e.g. documentation, cheatsheets, lyrics, notes..."
+url:              https://github.com/karloespiritu/blackdoc
+baseurl:          /
 
-# For a project page here should be a project name. Otherwise (for user's/organizaion's page leave it empty)
-baseurl: ''
+author:
+  name:           'Karlo Espiritu'
+  url:            https://twitter.com/karloespiritu
 
-social:
-  facebook: 100010552568083
-  twitter: psCanor
-  github: canorus
-  rss: feed.xml
+paginate:         5
 
-# Google Analytics key, leave blank to ignore
-google_analytics_key: UA-72894573-1
-# Yandex metrika (https://metrica.yandex.com/) leave blanc to ignore or put true to use
-yandex_metrica:
+# Custom vars
+version:          1.0.0
 
-
-# Set this to your disqus shortname to enable comments. Note that the 'comments'
-# setting below must also be true. Individual posts can override 'comments' to
-# disable on a post-by-post basis
-disqus: canor
-comments: true
-
-permalink: /:year/:month/:title
-
-# Enable for using pages, more details are here: http://jekyllrb.com/docs/pagination/
-#paginate: 3
-
-highlighter: rouge
-
-kramdown:
-  input: GFM
-  hard_wrap: false
-
-exclude: ['README.md', 'LICENSE']
+github:
+  repo:           https://github.com/karloespiritu/blackdoc
