--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 title:            Fabulam Canor
 tagline:          story of Canor
 description:
-baseurl:          https://canorus.github.io/
+baseurl:          https://canor.cf/
 
 author:
   name:           'Canor Eom'
