--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 title:            Fabulam Canor
 tagline:          story of Canor
 description:
-baseurl:          https://canor.cf/
+baseurl:          https://canor.github.io/
 #baseurl:          http://canorus.github.io/
 
 author:
